# gamercade-platform

./: .prettierignore  README.md  package-lock.json  package.json
src/: NavBar.svelte
src-tauri/: Cargo.toml  metadata.db  tauri.conf.json
src-tauri/src/: app_state.rs  auth.rs  lib.rs  main.rs
src-tauri/src/clients/: auth.rs  author.rs  game.rs  mod.rs  platform.rs  review.rs  tag.rs  user.rs
src-tauri/src/metadata/: game_metadata.rs  mod.rs
src/lib/: BackButton.svelte  GoToButton.svelte  NavBar.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/[gameId]/: +layout.server.ts  +page.svelte
src/routes/[gameId]/manage/: +page.svelte
src/routes/[gameId]/manage/files/: +page.svelte
src/routes/arcade/: +page.svelte
src/routes/arcade/login/: +page.svelte
src/routes/arcade/register/: +page.svelte
src/routes/arcade/search/: +page.svelte
src/routes/arcade/top/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/dashboard/create/: +page.svelte
src/routes/register/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/top/: +page.svelte
