[package]
name = "app"
version = "0.1.0"
description = "Platform Application for Gamercade"
authors = ["you"]
license = ""
repository = "https://github.com/gamercade-io/gamercade-platform"
default-run = "app"
edition = "2021"
rust-version = "1.60"
homepage = "https://gamercade.io"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.3", features = [] }

gamercade_interface = { git = "https://github.com/gamercade-io/gamercade_console", branch = "main" }
nohash-hasher = "0.2.0"
tonic = "0.11.0"
tokio = "1.37.0"
futures = "0.3.30"
futures-util = "0.3.30"
rusqlite = { version = "0.31.0", features = ["bundled"] }
json-patch = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
